- Computation of the online normalization - Introduction of an early stop validation - Fixing code for the normalization and early stop validation

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,9 @@
-﻿tsfresh~=0.20
-scikit-learn~=1.3
-numpy~=1.25
-pandas~=2.1
-tqdm~=4.66
-numba~=0.58
-dask~=2023.10
-scipy~=1.11
-gym~=0.26.2
-Cython
+aeon==0.6.0
+gym==0.26.2
+jqmcvi==1.0
+numpy==1.24.3
+pandas==2.0.3
+scikit_learn==1.3.0
+scipy==1.11.4
+tqdm==4.66.1
+tsfresh==0.20.1
