--- a/requirements.txt
+++ b/requirements.txt
@@ -71,7 +71,7 @@ isoduration==20.11.0
 jedi==0.19.1
 Jinja2==3.1.2
 joblib==1.3.2
-jqmcvi @ git+https://github.com/jqmviegas/jqm_cvi.git@9e1137d4f4df70c1287011e1a544b0c3fe36af36
+jqmcvi==1.0
 json5==0.9.14
 jsonpointer==2.4
 jsonschema==4.20.0
